# adit-sim

./: .commitmsg.txt  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  render.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: runs.py  scenarios.py  webhooks.py
backend/app/db/: models.py  session.py
backend/app/evaluators/: base.py  deterministic.py  llm_judge.py  rubrics.py
backend/app/messaging/: base.py  mock.py  ringcentral.py
backend/app/orchestrator/: single_run.py
backend/app/personas/: generator.py  prompts.py
backend/app/scenarios/: angry_billing_complaint.yaml  changes_mind_midcall.yaml  esl_vague_time.yaml  new_patient_tuesday.yaml  reschedule_with_insurance.yaml
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx  router.tsx
frontend/src/api/: client.ts  runs.ts  scenarios.ts
frontend/src/components/: EvalResultCard.tsx  ScenarioCard.tsx  TranscriptView.tsx
frontend/src/routes/: runs.$id.tsx  runs.index.tsx  runs.new.tsx  scenarios.index.tsx
retell-sim/: .dockerignore  Dockerfile  QA_FINDINGS.md  app.py  auth.py  railway.toml  real_phone.py  requirements.txt  server.py  supa.py
retell-sim/frontend/: index.html  package.json  tailwind.config.js
retell-sim/frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
retell-sim/frontend/src/components/: CustomScenario.tsx  LiveCall.tsx  LiveChat.tsx  LiveWebCall.tsx  LoginGate.tsx  ManualSMS.tsx  PromptConfigurator.tsx  RealManualConsole.tsx  RealOps.tsx  (+6 more)
(+13 files in other folders)
